--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewBathingSiteActivity"
-            android:label="@string/title_activity_new_bathing_site"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".MainActivity">
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="se.miun.kran1800.dt031g.bathingsites.MainActivity"
-                />
+                android:value="se.miun.kran1800.dt031g.bathingsites.MainActivity" />
+        </activity>
+        <activity
+            android:name=".NewBathingSiteActivity"
+            android:label="@string/title_activity_new_bathing_site"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="se.miun.kran1800.dt031g.bathingsites.MainActivity" />
         </activity>
         <activity
             android:name=".MainActivity"
